preliminary overleaf comit

--- a/main.tex
+++ b/main.tex
@@ -199,17 +199,17 @@ contents={%
 %%%%% input pages here %%%%%
 \input{pages/01_context}
 \pagebreak
-\input{pages/02_focusareas}
-\pagebreak
-\input{pages/03_demos}
-\pagebreak
-\input{pages/04_landuse}
-\pagebreak
-\input{pages/05_transportation}
-\pagebreak
-\input{pages/06_facilities}
-\pagebreak
-\input{pages/07_energy}
+% \input{pages/02_focusareas}
+% \pagebreak
+% \input{pages/03_demos}
+% \pagebreak
+% \input{pages/04_landuse}
+% \pagebreak
+% \input{pages/05_transportation}
+% \pagebreak
+% \input{pages/06_facilities}
+% \pagebreak
+% \input{pages/07_energy}
 
 \label{EndOfText}
 \end{document}
