--- a/pages/01_context.tex
+++ b/pages/01_context.tex
@@ -78,6 +78,6 @@
 
 \pagebreak
 \begin{landscape}
-    \includepdf[angle=90]{figures/boundary_etj.pdf}
+    \includepdf[angle=90]{maps/boundary_etj.pdf}
 \end{landscape}
 \pagebreak
