--- a/pages/context.tex
+++ b/pages/context.tex
@@ -1,6 +1,6 @@
 \section{Context}
 
-\subsection{Responsibility to Plan}
+\subsection*{Responsibility to Plan}
 
 \noindent Per \href{https://nebraskalegislature.gov/laws/statutes.php?statute=19-901}{Nebraska Revised Statutes (NRS) \S 19-901(1)}, municipal governments in Nebraska are granted the authority to regulate land use within their jurisdiction:
 
@@ -8,7 +8,7 @@
     For the purpose of promoting health, safety, morals, or the general welfare of the community, the city council of a city of the first class or city of the second class or the village board of trustees of a village may adopt zoning regulations which regulate and restrict the height, number of stories, and size of buildings and other structures, the percentage of lots that may be occupied, the size of yards, courts, and other open spaces, the density of population, and the location and use of buildings, structures, and land for trade, industry, residence, or other purposes.
 \end{quote}
 
-\subsection{Authority to Plan}
+\subsection*{Authority to Plan}
 
 \noindent \href{https://nebraskalegislature.gov/laws/statutes.php?statute=19-901}{NRS \S 19-901(2)} explains that zoning regulations may not be adopted until a comprehensive plan has been completed, recommended by the Planning Commission, and adopted by the City Council or Village Board of Trustees:
 
@@ -56,7 +56,7 @@
 
 \pagebreak
 
-\subsection{Building the Plan}
+\subsection*{Building the Plan}
 \noindent The Bloomfield Plan is organized into chapters based upon the guidance and requirements listed within \href{https://nebraskalegislature.gov/laws/statutes.php?statute=19-903}{NRS \S 19-903}:
 
 \begin{quote}
@@ -71,10 +71,12 @@
 \end{quote}
 
 \pagebreak
-\subsection{Jurisdiction of the Plan}
+\subsection*{Jurisdiction of the Plan}
 \noindent Per \href{https://nebraskalegislature.gov/laws/statutes.php?statute=17-1001}{NRS \S17-1001 (1)}, the geographical area covered by the City of Bloomfield Comprehensive Plan includes all land within a one-mile area encompassing the city, ``the extraterritorial zoning jurisdiction of a city shall consist of the unincorporated area one mile beyond and adjacent to its corporate boundaries."\\
 
-\noindent \textbf{Bloomfield Boundary and Extraterritorial Jurisdiction} on the following page displays Bloomfield's corporate boundary and zoning jurisdiction, which includes all lands within the City of Bloomfield and its One-Mile Extraterritorial Jurisdiction (ETJ). Bloomfield's land use policies govern all lands within the city as well as the ETJ.
+\noindent \textbf{Bloomfield Boundary and Extraterritorial Jurisdiction} on the following page displays Bloomfield's corporate boundary and zoning jurisdiction, which includes all lands within the City of Bloomfield and its One-Mile Extraterritorial Jurisdiction (ETJ). Bloomfield's land use policies govern all lands within the city as well as the ETJ.\\
+
+\noindent The map on the next page, \textbf{\textcolor{coBalt}{Bloomfield Municipal Boundary and Extraterritorial Jurisdiction}}, shows the extent of this territory. All\footnote{Other territories, such as Bloomfield Community Schools, expand beyond the ETJ. They will be included as necessary context for the plan, but are not (necessarily) subject to the emphasis on future land use planning.} of the existing and future land use decisions will be made with respect to this geographic footprint.
 
 \pagebreak
 \begin{landscape}
