Updates from Overleaf

--- a/pages/commrcial.tex
+++ b/pages/commrcial.tex
@@ -1,14 +1,14 @@
 \section{Commercial and Business Assessment}
 
-\subsection{Condition of Commercial Structures}
+% \subsection{Condition of Commercial Structures}
 
-\noindent \hl{[redo assessor map with commerical-listed parcels]}
+% \noindent \hl{[redo assessor map with commerical-listed parcels]}
 
 \subsection{Business Establishments}
 
 \noindent Over the last five years, the number of business establishments in Knox County has changed very little. \textbf{Figure~\ref{fig:bizEstablishments}} shows that the total number of businesses has decreased by just two during this time. All of the business loss is driven by fewer government establishments, while the number of private sector businesses has increased.
 
-\begin{figure}[ht!]
+\begin{figure}[H]
 \centering
 \begin{framed}
     \caption{Business Establishments in Knox County, Nebraska}
@@ -35,9 +35,36 @@
 % \subsubsection{Restaurants, Liquor, and Hospitality}
 % \subsubsection{Retail}
 
-\subsection{Labor, Wages, and Earnings}
+\pagebreak
+\subsection{Labor and Wages}
 
-\noindent \hl{[redo previous fig with wage and employee data]}
+\noindent Similarly, most of the employees in Knox County are employed by local governments or private firms. \textbf{Figure~\ref{fig:employment}} shows that the county has experienced minor job growth since 2020. However, most of these gains were seen in government jobs, while private-sector employment fell by about two percent in that time.
+
+\begin{figure}[H]
+\centering
+\begin{framed}
+    \caption{Employment in Knox County, Nebraska}
+    \label{fig:employment}
+    \includegraphics[width=\linewidth]{figures/employment.png}
+    \rule[-5pt]{\linewidth}{0.4pt}
+    \floatnote{Data come from the \href{https://www.bls.gov/cew/}{Bureau of Labor Statistics Quarterly Census of Employment and Wages}.}
+\end{framed}
+\end{figure}
+
+\pagebreak
+
+\noindent Across the board, real wages in Knox County increaed over the span of 2020 to 2023. However, these gains were largely erased in 2024. More time is needed to tell whether 
+
+\begin{figure}[H]
+\centering
+\begin{framed}
+    \caption{Real Wages in Knox County, Nebraska}
+    \label{fig:wages}
+    \includegraphics[width=\linewidth]{figures/avg_weekly_wage.png}
+    \rule[-5pt]{\linewidth}{0.4pt}
+    \floatnote{Data come from the \href{https://www.bls.gov/cew/}{Bureau of Labor Statistics Quarterly Census of Employment and Wages}. Units are in 2024-adjusted real dollars.}
+\end{framed}
+\end{figure}
 
 \subsection{Economic Activity}
 
