--- a/pages/housing.tex
+++ b/pages/housing.tex
@@ -63,9 +63,48 @@
 \end{landscape}
 \newpage
 
-\noindent The ages of structures are categorized by the Knox County property assessor. \textbf{Table} \hl{[]} shows the age distribution of structures in Bloomfield.\\
+\noindent The ages of structures are categorized by the Knox County property assessor. \textbf{Table~\ref{table:landAgeRes}} shows the age distribution of structures in Bloomfield.\\
 
-\noindent \hl{[need to regenerate this map]}
+\input{tables/tab_land_age}
+
+\pagebreak
+\subsubsection*{Remarks on Housing Age}
+\begin{itemize}
+    \item [(1)] \textbf{\textcolor{coBalt}{Dominance of Early 20th-Century Homes}}
+    \begin{itemize}
+        \item A large share of Bloomfield's housing stock was built between 1900 and 1960 (63\%).
+        \item The most-represented period is \textbf{1900-1920 (36\%)}.
+        \item The fact that many homes are more then one-hundred years old indicates a large need for \textbf{ongoing maintenance and potential rehabilitation}.
+    \end{itemize}
+    \item [(2)] \textbf{\textcolor{coBalt}{Prevalance of Pre-1900 homes}}
+    \begin{itemize}
+        \item 37 homes were built before 1900 (8.51\%).
+        \item These homes represent \textbf{historic structures}, often requiring specialized upkeep and are possibly eligible for \textbf{preservation incentives}.
+    \end{itemize}
+    \item [(3)] \textbf{\textcolor{coBalt}{Mid-Century Infill}}
+    \begin{itemize}
+        \item Significant housing construction took place \textbf{1960 and 1980}, with \textbf{118 units built}.
+        \item These homes are typically more modern in layout and materials, and \textbf{tend to be located away from Bloomfield's downtown}.
+    \end{itemize}
+    \item [(4)] \textbf{\textcolor{coBalt}{Minimal 21st-Century Construction}}
+    \begin{itemize}
+        \item Only 8 units have been built since 2000.
+        \item This indicates lower levels of new development, possible barriers such as \textbf{land availability, economic constraints, or infrastructure limitations}, and a need for \textbf{housing investment or incentives} to encourage new construction.
+    \end{itemize}
+    \item [(5)] \textbf{\textcolor{coBalt}{Overall Implications for Housing Policy}}
+    \begin{itemize}
+        \item Bloomfield's housing inventory is largely composed of \textbf{century-old homes}, with litte recent development.
+        \item This indicates a \textbf{mature and aging housnig stock}, suggesting a need for \textbf{housing rehabilitation programs}, targeted infill development, \textbf{infrastructure upgrades} to support new residential construction, and \textbf{strategic programming} to preserve historic character while meeting modern housing needs.
+    \end{itemize}
+\end{itemize}
+
+
+\newpage
+\thispagestyle{empty}
+\begin{landscape}
+    \includepdf[angle = 90]{maps/structure_age.pdf}
+\end{landscape}
+\newpage
 
 \pagebreak
 \subsection{Vacant and Underutilized Properties}
